--- a/frontend/templates/periodo.html
+++ b/frontend/templates/periodo.html
@@ -1,4 +1,4 @@
-<biblio-wrapper title="Administración" to-excel="#tabla">
+<wrapper title="Administración" to-excel="#tabla">
 
     <md-toolbar class="md-table-toolbar md-default" ng-hide="vm.crudSelected.length">
         <div class="md-toolbar-tools">
@@ -48,7 +48,7 @@
                              md-page-select>
         </md-table-pagination>
     </div>
-</biblio-wrapper>
+</wrapper>
 
 <script type="text/ng-template" id="/remuneraciones/form-unidad-operativa.html">
 
