--- a/frontend/templates/persona.html
+++ b/frontend/templates/persona.html
@@ -1,12 +1,14 @@
-<biblio-wrapper title="Administración" to-excel="#tabla">
+<wrapper title="Administración" to-excel="#tabla">
 
     <md-toolbar class="md-table-toolbar md-default" ng-hide="vm.crudSelected.length">
         <div class="md-toolbar-tools">
             <h2 class="md-title">Persona</h2>
             <div flex></div>
-            <md-button class="md-fab md-primary md-mini">
-                <md-icon>insert_drive_file</md-icon>
-            </md-button>
+            <update-insert-modal api-url="vm.crudApiUrl" on-save="vm.getCrudData()" template="form-persona.html">
+                <md-button class="md-fab md-primary md-mini">
+                    <md-icon>insert_drive_file</md-icon>
+                </md-button>
+            </update-insert-modal>
         </div>
     </md-toolbar>
 
@@ -17,7 +19,11 @@
                 <thead md-head md-order="vm.crudOrder" md-on-reorder="vm.getCrudData">
                 <tr md-row>
                     <th md-column>Código</th>
+                    <th md-column>Apellido Paterno</th>
+                    <th md-column>Apellido Materno</th>
+                    <th md-column>Nombres</th>
                     <th md-column>Email</th>
+                    <th md-column>Dispositivo</th>
                     <th md-column>Opciones</th>
                 </tr>
                 </thead>
@@ -28,11 +34,14 @@
                     <td md-cell>{{ data.materno }}</td>
                     <td md-cell>{{ data.nombres }}</td>
                     <td md-cell>{{ data.email }}</td>
-                    <td md-cell>{{ data.dispositivo }}</td>
+                    <td md-cell>{{ data.dispositivo_name }}</td>
                     <td md-cell width="110">
-                        <md-button class="md-icon-button md-primary">
-                            <md-icon>edit</md-icon>
-                        </md-button>
+                        <update-insert-modal row-data="data" api-url="data.url" on-save="vm.getCrudData()"
+                                             template="form-persona.html">
+                            <md-button class="md-icon-button md-primary">
+                                <md-icon>edit</md-icon>
+                            </md-button>
+                        </update-insert-modal>
                         <md-button class="md-icon-button md-warn">
                             <md-icon>delete</md-icon>
                         </md-button>
@@ -50,43 +59,31 @@
                              md-page-select>
         </md-table-pagination>
     </div>
-</biblio-wrapper>
+</wrapper>
 
-<script type="text/ng-template" id="/remuneraciones/form-unidad-operativa.html">
-
-    <md-dialog aria-label="Registro Unidad Operativa" flex>
-
-        <md-toolbar>
-            <div class="md-toolbar-tools">
-                <h2>Registro Unidad Operativa</h2>
-                <span flex></span>
-                <md-button class="md-icon-button" ng-click="form.cancel()">
-                    <md-icon>close</md-icon>
-                </md-button>
-            </div>
-        </md-toolbar>
-
-        <md-dialog-content>
-            <unap-form-unidad-operativa
-                    model-data="form.data"
-                    on-reset="form.reset()"
-                    on-create="form.perform()"
-                    on-update="form.perform()"
-                    on-cancel="form.cancel()"
-                    form-data="form.formData"
-                    server-messages="form.serverError">
-            </unap-form-unidad-operativa>
-
-        </md-dialog-content>
-
-        <md-dialog-actions style="border-top: 1px solid lightgrey">
-            <unap-buttons-form
-                    form-data="form.formData"
-                    show-cancel="false"
-                    flex>
-            </unap-buttons-form>
-        </md-dialog-actions>
-
-    </md-dialog>
-
+<script type="text/ng-template" id="form-persona.html">
+    <md-input-container flex>
+        <label>Codigo</label>
+        <input type="number" ng-model="vm.field.codigo"/>
+    </md-input-container>
+    <md-input-container flex>
+        <label>Paterno</label>
+        <input type="text" ng-model="vm.field.paterno"/>
+    </md-input-container>
+    <md-input-container flex>
+        <label>Materno</label>
+        <input type="text" ng-model="vm.field.materno"/>
+    </md-input-container>
+    <md-input-container flex>
+        <label>nombres</label>
+        <input type="text" ng-model="vm.field.nombres"/>
+    </md-input-container>
+    <md-input-container flex>
+        <label>Email</label>
+        <input type="email" ng-model="vm.field.email"/>
+    </md-input-container>
+    <md-input-container flex>
+        <label>Dispositivo</label>
+        <input type="number" ng-model="vm.field.dispositivo"/>
+    </md-input-container>
 </script>
