--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -1,14 +1,19 @@
 body {
-  overflow: hidden;
-  background-color: #EEEEEE;
+    overflow: hidden;
+    background-color: #EEEEEE;
 }
 
 md-whiteframe {
-  background: #fff;
+    background: #fff;
 }
 
 #content {
-  padding: 5px;
-  overflow: auto;
+    padding: 5px;
+    overflow: auto;
 }
 
+.error {
+    color: rgb(221, 44, 0);
+    font-size: 12px;
+    text-size-adjust: 100%;
+}
