--- a/frontend/templates/registro.html
+++ b/frontend/templates/registro.html
@@ -2,9 +2,9 @@
 
     <md-toolbar class="md-table-toolbar md-default" ng-hide="vm.crudSelected.length">
         <div class="md-toolbar-tools">
-            <h2 class="md-title">Horario</h2>
+            <h2 class="md-title">Registro</h2>
             <div flex></div>
-            <update-insert-modal api-url="vm.crudApiUrl" on-save="vm.getCrudData()" template="form-horario.html">
+            <update-insert-modal api-url="vm.crudApiUrl" on-save="vm.getCrudData()" template="form-registro.html">
                 <md-button class="md-fab md-primary md-mini">
                     <md-icon>insert_drive_file</md-icon>
                 </md-button>
@@ -18,22 +18,18 @@
             <table md-table>
                 <thead md-head md-order="vm.crudOrder" md-on-reorder="vm.getCrudData">
                 <tr md-row>
-                    <th md-column>Nombre</th>
-                    <th md-column>Descripción</th>
-                    <th md-column>Inicio</th>
-                    <th md-column>Final</th>
+                    <th md-column>Persona</th>
+                    <th md-column>Marca</th>
                     <th md-column>Opciones</th>
                 </tr>
                 </thead>
                 <tbody md-body>
                 <tr md-row ng-repeat="data in vm.crudData">
-                    <td md-cell>{{ data.nombre }}</td>
-                    <td md-cell>{{ data.descripcion }}</td>
-                    <td md-cell>{{ data.inicio }}</td>
-                    <td md-cell>{{ data.final }}</td>
+                    <td md-cell>{{ data.persona_name }}</td>
+                    <td md-cell>{{ data.marca }}</td>
                     <td md-cell width="110">
                         <update-insert-modal row-data="data" api-url="data.url" on-save="vm.getCrudData()"
-                                             template="form-horario.html">
+                                             template="form-registro.html">
                             <md-button class="md-icon-button md-primary">
                                 <md-icon>edit</md-icon>
                             </md-button>
@@ -55,29 +51,19 @@
     </div>
 </wrapper>
 
-<script type="text/ng-template" id="form-horario.html">
+<script type="text/ng-template" id="form-registro.html">
     <div layout="row">
-        <md-input-container flex="30">
-            <label>Nombre</label>
-            <input type="text" ng-model="vm.field.nombre"/>
-            <field-error error-data="vm.error.nombre"></field-error>
-        </md-input-container>
-        <md-input-container flex="30">
-            <label>Descripcion</label>
-            <input type="text" ng-model="vm.field.descripcion"/>
-            <field-error error-data="vm.error.descripcion"></field-error>
+        <md-input-container flex>
+            <label>Persona</label>
+            <input type="text" ng-model="vm.field.persona"/>
+            <field-error error-data="vm.error.persona"></field-error>
         </md-input-container>
     </div>
     <div layout="row">
-        <md-input-container flex="50">
-            <label>Inicio</label>
-            <input type="text" datetime="HH:mm:ss" ng-model="vm.field.inicio"/>
-            <field-error error-data="vm.error.inicio"></field-error>
-        </md-input-container>
-        <md-input-container flex="50">
-            <label>Final</label>
-            <input type="text" datetime="HH:mm:ss" ng-model="vm.field.final"/>
-            <field-error error-data="vm.error.final"></field-error>
+        <md-input-container flex>
+            <label>Marca</label>
+            <input type="datetime-local" placeholder="HH:mm:ss" ng-model="vm.field.marca"/>
+            <field-error error-data="vm.error.marca"></field-error>
         </md-input-container>
     </div>
 </script>
