--- a/frontend/templates/horario.html
+++ b/frontend/templates/horario.html
@@ -71,12 +71,12 @@
     <div layout="row">
         <md-input-container flex="50">
             <label>Inicio</label>
-            <input type="text" datetime="HH:mm:ss" ng-model="vm.field.inicio"/>
+            <input type="text" datetime="HH:mm:ss" ng-model="vm.field.inicio" datetime-model="HH:mm:ss"/>
             <field-error error-data="vm.error.inicio"></field-error>
         </md-input-container>
         <md-input-container flex="50">
             <label>Final</label>
-            <input type="text" datetime="HH:mm:ss" ng-model="vm.field.final"/>
+            <input type="text" datetime="HH:mm:ss" ng-model="vm.field.final" datetime-model="HH:mm:ss"/>
             <field-error error-data="vm.error.final"></field-error>
         </md-input-container>
     </div>
