--- a/frontend/templates/registro.html
+++ b/frontend/templates/registro.html
@@ -55,7 +55,7 @@
     <div layout="row">
         <md-input-container flex>
             <label>Persona</label>
-            <field-select api-url="'/api/persona/'" model="vm.field.persona" field="nombres"></field-select>
+            <field-select api-url="'/api/persona/'" model="vm.field.persona" field="nombre_completo"></field-select>
             <field-error error-data="vm.error.persona"></field-error>
         </md-input-container>
     </div>
