--- a/frontend/templates/persona.html
+++ b/frontend/templates/persona.html
@@ -87,7 +87,7 @@
     <div layout="row">
         <md-input-container flex="50">
             <label>Email</label>
-            <input type="email" ng-model="vm.field.email"/>
+            <input type="text" ng-model="vm.field.email"/>
             <field-error error-data="vm.error.email"></field-error>
         </md-input-container>
         <md-input-container flex="50">
