--- a/frontend/templates/registro.html
+++ b/frontend/templates/registro.html
@@ -62,7 +62,7 @@
     <div layout="row">
         <md-input-container flex>
             <label>Marca</label>
-            <input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="vm.field.marca" datetime-model="yyyy-MM-ddTHH:mm:ssZ"/>
+            <input type="text" datetime="yyyy-MM-dd HH:mm:ss" ng-model="vm.field.marca" datetime-model="yyyy-MM-ddTHH:mm:ss"/>
             <field-error error-data="vm.error.marca"></field-error>
         </md-input-container>
     </div>
